added missing translation strings for gesture options page

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -202,6 +202,14 @@
     "description": "Shows a notification when Gesturefy is updated."
   },
 
+  "gestureCreateNewButton": {
+    "message": "New Gesture",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "Search gestures",
+    "description": "Search gestures"
+  },
   "gestureHintNoSearchResults": {
     "message": "No search results found",
     "description": "No search results found"
