New Crowdin translations (#469)
* New translations messages.json (Polish)

* New translations messages.json (Polish)

* New translations messages.json (Italian)

* New translations messages.json (Dutch)

* New translations messages.json (Polish)

* New translations messages.json (Polish)

* New translations messages.json (Polish)

* New translations messages.json (Dutch)

* New translations messages.json (Dutch)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Dutch)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Dutch)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Russian)

* New translations messages.json (German)

* New translations messages.json (Polish)

* New translations messages.json (Hebrew)

* New translations messages.json (Thai)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (Vietnamese)

* New translations messages.json (Chinese Traditional)

* New translations messages.json (Ukrainian)

* New translations messages.json (Turkish)

* New translations messages.json (Swedish)

* New translations messages.json (Serbian (Cyrillic))

* New translations messages.json (Slovak)

* New translations messages.json (Portuguese)

* New translations messages.json (Norwegian)

* New translations messages.json (Korean)

* New translations messages.json (Japanese)

* New translations messages.

--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Navigera, manövrera och bläddra snabbare med musrörelser! Ett anpassningsbart musrörelsetillägg med en mängd olika kommandon.",
+    "message": "Naviga più velocemente con i gesti del mouse! Un componente aggiuntivo del mouse personalizzabile con una varietà di comandi diversi.",
     "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
@@ -194,6 +194,14 @@
   "settingDescriptionUpdateNotification": {
     "message": "Visualizza una notifica quando viene aggiornato Gesturefy.",
     "description": "Shows a notification when Gesturefy is updated."
+  },
+  "gestureCreateNewButton": {
+    "message": "Nuovo Gesto",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "Cerca gesti",
+    "description": "Search gestures"
   },
   "gestureHintNoSearchResults": {
     "message": "Nessun risultato trovato",
