--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -195,6 +195,14 @@
     "message": "Gesturefy が更新された際に通知を表示します。",
     "description": "Shows a notification when Gesturefy is updated."
   },
+  "gestureCreateNewButton": {
+    "message": "新しいジェスチャー",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "ジェスチャーを検索",
+    "description": "Search gestures"
+  },
   "gestureHintNoSearchResults": {
     "message": "見つかりませんでした",
     "description": "No search results found"
