--- a/src/_locales/ko_KR/messages.json
+++ b/src/_locales/ko_KR/messages.json
@@ -195,6 +195,14 @@
     "message": "Gesturefy가 업데이트되었을 때 알림을 표시합니다.",
     "description": "Shows a notification when Gesturefy is updated."
   },
+  "gestureCreateNewButton": {
+    "message": "새 제스처",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "제스처 검색",
+    "description": "Search gestures"
+  },
   "gestureHintNoSearchResults": {
     "message": "검색 결과가 없습니다.",
     "description": "No search results found"
