--- a/src/_locales/sv_SE/messages.json
+++ b/src/_locales/sv_SE/messages.json
@@ -195,6 +195,14 @@
     "message": "Visar en avisering när Gesturefy har uppdaterats.",
     "description": "Shows a notification when Gesturefy is updated."
   },
+  "gestureCreateNewButton": {
+    "message": "Ny rörelse",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "Sök rörelser",
+    "description": "Search gestures"
+  },
   "gestureHintNoSearchResults": {
     "message": "Inga sökresultat hittades",
     "description": "No search results found"
