--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -195,6 +195,14 @@
     "message": "Zobrazí oznámení po aktualizaci Gesturefy.",
     "description": "Shows a notification when Gesturefy is updated."
   },
+  "gestureCreateNewButton": {
+    "message": "Nové Gesto",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "Hledat gesta",
+    "description": "Search gestures"
+  },
   "gestureHintNoSearchResults": {
     "message": "Nebyly nalezeny žádné výsledky",
     "description": "No search results found"
