--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -195,6 +195,14 @@
     "message": "Zeigt eine Benachrichtigung an, wenn Gesturefy aktualisiert wurde.",
     "description": "Shows a notification when Gesturefy is updated."
   },
+  "gestureCreateNewButton": {
+    "message": "Neue Geste",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "Gesten durchsuchen",
+    "description": "Search gestures"
+  },
   "gestureHintNoSearchResults": {
     "message": "Keine Suchergebnisse gefunden",
     "description": "No search results found"
@@ -936,7 +944,7 @@
     "description": "Executes custom JavaScript code in the current webpage."
   },
   "commandDescriptionClearBrowsingData": {
-    "message": "Löscht die angegebenen Browserdaten.",
+    "message": "Entfernt die angegebenen Browserdaten.",
     "description": "Removes the specified browsing data."
   },
   "commandSettingLabelNewTabPosition": {
