--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -195,6 +195,14 @@
     "message": "當 Gesturefy 更新後顯示一個通知",
     "description": "Shows a notification when Gesturefy is updated."
   },
+  "gestureCreateNewButton": {
+    "message": "新手勢",
+    "description": "New Gesture"
+  },
+  "gestureSearchPlaceholder": {
+    "message": "搜尋手勢",
+    "description": "Search gestures"
+  },
   "gestureHintNoSearchResults": {
     "message": "無搜尋結果",
     "description": "No search results found"
